Padding added to table-cell element after font-size change. https://bugs.webkit.org/show_bug.cgi?id=152796

Reviewed by David Hyatt.

Do not include intrinsicPaddingBefore value while figuring out the height of a row.
In RenderTableSection::calcRowLogicalHeight() we are interested in the height of the content
without the additional padding (normal padding is included).

Source/WebCore:

Test: fast/table/table-baseline-grows.html

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::calcRowLogicalHeight):

LayoutTests:

* TestExpectations: This test fails even without the patch when Ahem font is not used.
* fast/table/table-baseline-grows-expected.html: Added.
* fast/table/table-baseline-grows.html: Added.


Canonical link: https://commits.webkit.org/171073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194867 268f45cc-cd09-0410-ab3c-d52691b4dbfc